corrscting js and organizing html accordingly

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -7,6 +7,19 @@
     <title>Movies</title>
 </head>
 <body>
+    <div class="main-content">
+
+        <p>
+            Use this site to get similar movies!
+        </p>
+
+        <form>
+            <input placeholder="Location">
+            <button>Search</button>
+        </form>
+    </div>
+    
+    <p id="message-1"></p>
 
     <script src="script.js"></script>
 </body>
